Fixed overflow

--- a/src/components/styles/BackgroundSectionViewStyle.css
+++ b/src/components/styles/BackgroundSectionViewStyle.css
@@ -9,7 +9,7 @@
     width: 100%;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
     gap: 3rem;
 }
 
